Update to k8s 1.24 toolchain (#207)
